# hackathon2022

./: .gitignore  .gitmodules  Cargo.toml  README  README.md
233bit/: README
233bit/calculator-rs/: Cargo.toml  build.rs  resource.rc
233bit/calculator-rs/src/: dictread.rs  gui.rs  main.rs
EvolutionLab/: README.md  pubspec.yaml
EvolutionLab/android/app/: build.gradle
EvolutionLab/assets/pattern/: 10x10maxdensity.rle  1beacon_synth.rle  1beaconpredecessor.rle  1x256schickengine.rle  1xnquadraticgrowth.rle  2.2.4.rle  2.2.5.rle  2.2.6.rle  2.3.3.rle  2.3.4.rle  2.3.5.rle  2.3.6.rle  2bipondproducingregions.rle  2by3groupofblocks.rle  2c3wire.rle  2c5puffer1.rle  2c7waves.rle  2eatersplusloaf.rle  2eceater.rle  2enginecordership.rle  2enginecordership_synth.rle  2fumaroles.rle  (+64 more)
EvolutionLab/lib/: main.dart
EvolutionLab/linux/: CMakeLists.txt  my_application.cc  rust.cmake
EvolutionLab/rust/: Cargo.toml
EvolutionLab/rust/src/: array_life.rs  bridge.rs  bridge_generated.io.rs  bridge_generated.rs  lib.rs
EvolutionLab/rust/src/pattern/: gospers_glider_gun_synth.txt  mod.rs  rle.rs
EvolutionLab/test/: widget_test.dart
EvolutionLab/web/: index.html  manifest.json
EvolutionLab/windows/: CMakeLists.txt
a1-gao-shan-dui/: .gitignore  Cargo.toml  README.md  flake.nix
a1-gao-shan-dui/examples/: README.md
a1-gao-shan-dui/examples/counter/: Cargo.toml  index.html
a1-gao-shan-dui/examples/counter/src/: main.rs
a1-gao-shan-dui/examples/for/: Cargo.toml  index.html
a1-gao-shan-dui/examples/for/src/: main.rs
a1-gao-shan-dui/examples/list/: Cargo.toml  index.html
a1-gao-shan-dui/examples/list/src/: main.rs
a1-gao-shan-dui/examples/show/: Cargo.toml  index.html
a1-gao-shan-dui/examples/show/src/: main.rs
a1-gao-shan-dui/examples/todomvc/: Cargo.toml  README.md  index.html
a1-gao-shan-dui/examples/todomvc/src/: main.rs
a1-gao-shan-dui/src/: component.rs  element.rs  elements.rs  event_delegation.rs  lib.rs  macros.rs  node.rs  private.rs  reactive.rs  template.rs  utils.rs  view.rs
a1-gao-shan-dui/src/components/: element.rs  for.rs  fragment.rs  list.rs  show.rs
a1-gao-shan-dui/src/elements/: text.rs
embassy-cloud/: README.md
ftlfs/: README.md
ftlfs/rustfs/: build.rs
ftlfs/tutorial/: README.md
ftlfs/tutorial/rustfs/: Cargo.toml  README.md  build.rs
ftlfs/tutorial/rustfs/src/: fuse.rs  main.rs
ftlfs/tutorial/rustfs/src/buffer/: buffer_pool_manager.rs  flusher.rs  mod.rs  replacer.rs
ftlfs/tutorial/rustfs/src/ddriver/: disk.rs  ioctl.rs  mod.rs
ftlfs/tutorial/rustfs/src/fs/: dcache.rs  mod.rs  types.rs  utils.rs
ftlfs/tutorial/rustfs/src/utils/: defer_guard.rs  semaphore.rs
ftlfs/tutorial/rustfs/tests/: Makefile
fufennan/: .gitignore  Cargo.toml  README.MD  index.html
fufennan/src/: component.rs  main.rs
lloyd/: Cargo.toml  README  README.md
lloyd/common/: Cargo.toml
lloyd/common/src/: doc.rs  enumer.rs  inspector.rs  lib.rs  validator.rs
lloyd/frontend/apidoc/: Cargo.toml  index.html
lloyd/frontend/apidoc/src/: api_detail.rs  api_list.rs  main.rs
lloyd/frontend/apidoc/src/atom/: mod.rs
lloyd/frontend/apidoc/src/atom/navigation/: menu.rs
lloyd/procmac/: Cargo.toml
lloyd/procmac/src/: ast.rs  attr.rs  fmt.rs  lib.rs  tools.rs
lloyd/procmac/src/expand/: apidoc.rs  component.rs  config.rs  enumer.rs  enumprop.rs  httpcode.rs  mod.rs  multipart.rs  validator.rs
lloyd/resources/: log.yaml
lloyd/tools/: Cargo.toml
lloyd/tools/src/: case.rs  lib.rs  validate.rs
lloyd/tools/src/tests/: mod.rs  validate.rs
lloyd/webapp/demo-app/: Cargo.toml
lloyd/webapp/demo-app/src/: args.rs  gen_router.rs  main.rs
lloyd/webapp/demo-app/src/api/: mod.rs
lloyd/webapp/demo-app/src/api/v0/: mod.rs  query_age_by_phone.rs  registe_by_email.rs
lloyd/webase/: Cargo.toml
lloyd/webase/src/: args.rs  config.rs  enumer.rs  error.rs  global.rs  lib.rs  log.rs  router.rs  signal.rs  state.rs
lloyd/webase/src/doc/: mod.rs  model.rs  param.rs  prelude.rs
lloyd/webase/src/dto/: data.rs  mod.rs  page.rs  resp.rs
lloyd/webase/src/extractor/: component.rs  extension.rs  form.rs  header.rs  json.rs  mod.rs  multipart.rs  path.rs  query.rs
lloyd/webase/src/handler/: doc.rs  handle_404.rs  health.rs  mod.rs
lloyd/webase/src/handler/doc/: list.rs  mod.rs
lloyd/webase/src/middleware/: error.rs  log.rs  mod.rs  reqid.rs
lloyd/webase/src/util/: axum.rs  fs.rs  ip.rs  mod.rs  serde.rs  time.rs
lloyd/webmod/m1/: Cargo.toml
lloyd/webmod/m1/src/: gen_router.rs  lib.rs
lloyd/webmod/m1/src/api/: mod.rs
lloyd/webmod/m1/src/api/v0/account/: add.rs  mod.rs
lloyd/webmod/m1/src/api/v1/account/: add.rs  mod.rs
lloyd/webmod/m2/: Cargo.toml  build.rs
lloyd/webmod/m2/src/: gen_router.rs  state.rs
lloyd/webmod/m2/src/api/: mod.rs
lloyd/webmod/m2/src/api/v0/: mod.rs
lloyd/webmod/m2/src/api/v0/school/: mod.rs  select.rs
mofang/: Cargo.toml  README.md
mofang/src/: camera.rs  core.rs  lib.rs  main.rs  viewer.rs
rubiks/: .gitignore  Cargo.toml  README.md  build.rs  index.html
rubiks/crates/rubiks_solver/: Cargo.toml  README.md
rubiks/crates/rubiks_solver/src/: generic_cube.rs  generic_solver.rs  lib.rs  prelude.rs  scramble_parser.rs  thistlethwaite.rs
rubiks/crates/rubiks_solver/src/facelet_cube/: cube.rs  mod.rs  moves.rs
rubiks/crates/rubiks_solver/src/geometric_cube/: cube.rs  mod.rs  moves.rs  sticker.rs
rubiks/crates/rubiks_solver/tests/: 2x2x2.rs  3x3x3.rs  4x4x4.rs  scramble_parser.rs  thistlethwaite.rs
rubiks/src/: camera.rs  core.rs  lib.rs  main.rs  parser.rs  viewer.rs
src/: lib.rs  main.rs
src/data/: command.rs  mod.rs  settings.rs
src/ui/: baog_blog.rs  baog_home.rs  events.rs  messages.rs  mod.rs
tauri-web3-albumn/: .env.example  .eslintrc  .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts  windi.config.ts
tauri-web3-albumn/env/: default.env  global.env
tauri-web3-albumn/locales/: en.yml  zh.yml
tauri-web3-albumn/src/: App.vue  auto-imports.d.ts  components.d.ts  main.ts  whiteList.ts
tauri-web3-albumn/src-tauri/: Cargo.toml  tauri.conf.json
(+142 files in other folders)
