[package]
name = "bevy_rubikscube"
version = "0.1.0"
authors = ["ZoOL <zhooul@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = ["bevy-inspector-egui"]

[dependencies]
bevy = "0.9"
bevy_egui = "0.17.1"
bevy-inspector-egui = { version = "0.14.0", optional = true }
