[package]
name = "合成材料计算器"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-windows-gui = "1.0.13"
native-windows-derive = "1.0.5"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3.2"

[build-dependencies]
embed-resource = "1.8"

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'