[package]
name = "rustfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc ="0.2"
log = "0.4.17"
env_logger = "0.10.0"
parking_lot = { version = "0.12", features = ["nightly","deadlock_detection"] }
