[package]
name = "demo-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
procmac = { workspace = true }
common = { workspace = true }
tools = { workspace = true }
webase = { workspace = true }
m1 = { workspace = true }
m2 = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true, features = [
    "util",
    "timeout",
    "limit",
    "load-shed",
    "steer",
    "filter",
] }
axum = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
structopt = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
tower-http = { workspace = true }
